--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,10 @@ html, body {
   padding: 0;
   overflow: auto;
 }
-.element {
-  max-height: 300px; /* Définissez la hauteur maximale souhaitée */
-  overflow-y: auto; /* Active le défilement vertical lorsque le contenu dépasse la hauteur */
+.scroller {
+  width: 300px;
+  height: 100px;
+  overflow-y: scroll;
+  scrollbar-color: rebeccapurple green;
+  scrollbar-width: thin;
 }
